--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>gson</artifactId>
         </dependency>
 
+        <!-- 微信 公众号（包括订阅号和服务号） -->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
 
     </dependencies>
 
