--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,19 @@
             <artifactId>gson</artifactId>
         </dependency>
 
-        <!-- 微信 公众号（包括订阅号和服务号） -->
+        <!-- 微信 公众号 网页登录授权（包括订阅号和服务号） -->
         <dependency>
             <groupId>com.github.binarywang</groupId>
             <artifactId>weixin-java-mp</artifactId>
             <version>3.3.0</version>
         </dependency>
 
+        <!-- 微信支付 SDK 廖师兄 -->
+        <dependency>
+            <groupId>cn.springboot</groupId>
+            <artifactId>best-pay-sdk</artifactId>
+            <version>1.2.0</version>
+        </dependency>
 
     </dependencies>
 
