--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,5 +24,5 @@ wechat:
   Secret: 74f0139cd49d10017c8be89f79277802
   MchId:
   MchKey:
-  NotifyUrl:
+  NotifyUrl: https://pay.weixin.qq.com/pay/notify
 
