--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,19 @@ spring:
     show-sql: true
   jackson:
     default-property-inclusion: non_null # 空字段不返回
+# redis
+  redis:
+    database: 0 # Redis数据库索引（默认为0）
+    host: //TODO
+    password:  # Redis服务器连接密码（默认为空）
+    port: 6379
+    pool:
+      max-active: 200 # 连接池最大连接数（使用负值表示没有限制）
+      max-wait: -1 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-idle: 10 # 连接池中的最大空闲连接
+      min-idle: 0  # 连接池中的最小空闲连接
+    timeout: 1000 # 连接超时时间（毫秒）
+
 # 项目路径
 server:
   context-path: /sell
